<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="@dimen/fragment_menu_20dp"
            android:src="@drawable/ic_math" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/best"
            android:text="@string/txt_Math"
            android:textColor="@color/white"
            android:textSize="@dimen/fragment_menu_20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/best"
            android:text="@string/txt_game"
            android:textColor="@color/gray"
            android:textSize="@dimen/fragment_menu_18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_icon">

        <TextView
            android:id="@+id/tv_count_number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_menu_60dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/border_button"
            android:fontFamily="@font/best"
            android:gravity="center"
            android:text="@string/txt_count_number"
            android:textColor="@color/gray_1"
            android:textSize="@dimen/fragment_menu_18sp" />

        <TextView
            android:id="@+id/tv_plus_minus"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_menu_60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_button"
            android:fontFamily="@font/best"
            android:gravity="center"
            android:text="@string/txt_plus_minus"
            android:textColor="@color/gray_1"
            android:textSize="@dimen/fragment_menu_18sp" />

        <TextView
            android:id="@+id/tv_multiply_divide"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_menu_60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_button"
            android:fontFamily="@font/best"
            android:gravity="center"
            android:text="@string/txt_multiply_divide"
            android:textColor="@color/gray_1"
            android:textSize="@dimen/fragment_menu_18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>